test/grammar/datatype/units/invalid_units_fail_1/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:1:6
  |
1 | ni = 1ni
  |      ^ invalid int binary suffix
  |